[package]
name = "euterpe"
authors = ["P.Simcic"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".","entity","migration"]


[dependencies]
entity = { path="./entity" }
migration = { path="./migration" }
axum = { version = "0.6.2", features = ["headers", "macros"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.10.6", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"


